--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/assets/green-favicon.png">
+  <link rel="icon" type="image/x-icon" href="https://sohoffice.github.io/angular-universalize-email/assets/green-favicon.png">
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 </head>
