--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,13 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@douglas_liu">
+  <meta name="twitter:creator" content="@douglas_liu">
+  <meta property="og:url" content="https://sohoffice.github.io/angular-universalize-email/home">
+  <meta property="og:title" content="Send a welcome letter made of mat-card.">
+  <meta property="og:description" content="Send a welcome letter made of mat-card. This is powered by angular-universalize-email, an open source utility to process Angular pages into email templates.">
+  <meta property="og:image" content="https://sohoffice.github.io/angular-universalize-email/assets/tania-melnyczuk-1245936-unsplash.jpg">
   <link rel="icon" type="image/x-icon" href="https://sohoffice.github.io/angular-universalize-email/assets/green-favicon.png">
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
